--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </header>
 
 <body>
+    <img src="./sergey/123.jpg" alt="WOW">
     <aside class="test-color">
         <p>
             <imgsrc=" " alt="">Foto.</p>
